--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,15 @@ h2,
 h3 {
     margin: 0;
 }
+h2, h3 {
+    text-align: center;
+}
 
+h3 {
+    color:var(--secundario);
+    font-weight: 400;
+    font-size: 3rem;
+}
 .site-header {
     background-color: #ffffff;
 }
@@ -109,4 +117,18 @@ h3 {
     font-weight: 700;
     font-size: 2.2rem;
     border-radius: .5rem;
+}
+
+.contenedor {
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 3rem;
+    border-radius: 1rem;
+    -webkit-box-shadow: 0px 10px 21px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 21px -8px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 21px -8px rgba(0,0,0,0.75);
+}
+.servicios {
+    margin: 3rem auto;
 }
