--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,23 @@ h2,
 h3 {
     margin: 0;
 }
-h2, h3 {
+
+h2,
+h3 {
     text-align: center;
 }
 
 h3 {
-    color:var(--secundario);
+    color: var(--secundario);
     font-weight: 400;
     font-size: 3rem;
 }
+
+p {
+    font-size: 1.8rem;
+    line-height: 2;
+}
+
 .site-header {
     background-color: #ffffff;
 }
@@ -125,10 +133,46 @@ h3 {
     background-color: white;
     padding: 3rem;
     border-radius: 1rem;
-    -webkit-box-shadow: 0px 10px 21px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 10px 21px -8px rgba(0,0,0,0.75);
-    box-shadow: 0px 10px 21px -8px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 10px 21px -8px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 10px 21px -8px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 10px 21px -8px rgba(0, 0, 0, 0.75);
 }
+
 .servicios {
     margin: 3rem auto;
+}
+
+.contenedor-servicios {
+    margin-top: 3rem;
+}
+
+@media (min-width: 768px) {
+    .contenedor-servicios {
+        display: flex;
+        justify-content: space-between;
+    }
+    .servicio {
+        flex: 0 0 calc(33.3% - 1rem)
+    }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.iconos {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: var(--primario);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 3rem;
+}
+
+.iconos {
+    font-size: 3rem;
 }
